# test2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  schemas.py
frontend/: package.json
frontend/src/: App.tsx
nginx/: default.conf
