
[tool.poetry]
name = "360-performance-hub"
version = "0.1.0"
description = ""
authors = ["Codex <codex@openai.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = {version = ">=0.35.0,<0.36.0", extras = ["standard"]}
sqlalchemy = ">=2.0.41,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"
python-dotenv = ">=1.1.1,<2.0.0"
passlib = {version = ">=1.7.4,<2.0.0", extras = ["bcrypt"]}
python-pptx = ">=1.0.2,<2.0.0"
matplotlib = ">=3.10.3,<4.0.0"
gunicorn = ">=23.0,<24.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
